--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.1",
     "@react-navigation/bottom-tabs": "6.5.7",
     "@react-navigation/material-bottom-tabs": "6.2.15",
     "@react-navigation/material-top-tabs": "6.6.2",
     "@react-navigation/native": "6.1.6",
     "@react-navigation/stack": "6.3.16",
     "@types/react-native-vector-icons": "6.4.13",
+    "axios": "1.4.0",
+    "mobx": "6.9.0",
+    "mobx-react": "7.6.0",
+    "mobx-react-lite": "3.4.3",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "2.9.0",
@@ -25,7 +30,8 @@
     "react-native-screens": "3.20.0",
     "react-native-svg": "13.9.0",
     "react-native-tab-view": "3.5.1",
-    "react-native-vector-icons": "9.2.0"
+    "react-native-vector-icons": "9.2.0",
+    "styled-components": "5.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -36,6 +42,8 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "5.1.26",
+    "@types/styled-components-react-native": "5.2.1",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
