--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mobx-react-lite": "3.4.3",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-elements": "3.4.3",
     "react-native-gesture-handler": "2.9.0",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "5.7.2",
