--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mobx-react": "7.6.0",
     "mobx-react-lite": "3.4.3",
     "react": "18.2.0",
+    "react-devtools": "4.27.7",
     "react-native": "0.71.7",
     "react-native-elements": "3.4.3",
     "react-native-gesture-handler": "2.9.0",
